--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿aiohttp==3.9.5
+aiohttp==3.9.5
 aiosignal==1.3.1
 altair==5.3.0
 annotated-types==0.7.0
@@ -124,3 +124,4 @@ PyGithub
 streamlit_chat
 youtube-search-python
 streamlit-extras
+pytz
